Added Service Provider Website

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
         }
 	#developer{
 	    font-size: 12px;
-        color: white;
 	}
+    #company-website{
+        color: white;
+    }
     </style>
 </head>
 <body>
@@ -136,7 +138,7 @@
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Saut-Ul-Islam Darzipora, Kupwara. All rights reserved.</p>
-	<p id="developer">Developed and Maintained by <a href="https://cybercastplus.infy.uk">CYBERCAST+ Software Solutions.</a></p>
+	<p id="developer">Developed and Maintained by <a id="company-website" href="https://cybercastplus.infy.uk">CYBERCAST+ Software Solutions.</a></p>
     </footer>
 
     <script>
