Added Service Provider Website

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section id="welcome">
             <h2>Auqaf Committee Saut-Ul-Islam Darzipora Welcomes You From Bottom of The Heart! </h2>
             <p>Manage your accounts efficiently and securely.</p>
-            <button onclick="exploreFeatures()">Explore Features</button>
+            <button onclick="learnMore()">Explore Features</button>
         </section>
     </main>
 
@@ -142,6 +142,10 @@
     </footer>
 
     <script>
+        function learnMore() {
+             // You can also redirect to the features page if needed
+             window.location.href = "https://cybercastplus.infy.uk/";
+        }
         function exploreFeatures() {
              // You can also redirect to the features page if needed
              window.location.href = "features.html";
