--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
@@ -131,7 +131,7 @@
         <section id="welcome">
             <h2>Auqaf Committee Saut-Ul-Islam Darzipora Welcomes You From Bottom of The Heart! </h2>
             <p>Manage your accounts efficiently and securely.</p>
-            <button onclick="learnMore()">Explore Features</button>
+            <button onclick="learnMore()">Learn more</button>
         </section>
     </main>
 
@@ -146,9 +146,9 @@
              // You can also redirect to the features page if needed
              window.location.href = "https://cybercastplus.infy.uk/";
         }
-        function exploreFeatures() {
+        function login() {
              // You can also redirect to the features page if needed
-             window.location.href = "features.html";
+             window.location.href = "login.html";
         }
     </script>
 </body>
