--- a/login.html.html
+++ b/login.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Login Page</title>
+    <title>SID-Info-System</title>
     <style>
         /* General Reset */
         * {
