--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #6b73ff, #000dff);
+            background: linear-gradient(135deg, #a0a1bd, #040406);
             height: 100vh;
             display: flex;
             justify-content: center;
