--- a/receive-payments.html
+++ b/receive-payments.html
@@ -20,6 +20,16 @@
             align-items: center;
             padding: 20px;
         }
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #a0a1bd, #040406);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            padding: 20px;
+        }
 
         h1 {
             margin-bottom: 20px;
