--- a/features.html
+++ b/features.html
@@ -14,11 +14,14 @@
         }
 
         body {
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #f9f9f9;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #a0a1bd, #040406);
+            height: 100vh;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
+            color: #fff;
             padding: 20px;
         }
 
