--- a/donation.html
+++ b/donation.html
@@ -18,6 +18,7 @@
             background: linear-gradient(135deg, #a0a1bd, #040406);
             height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             color: #fff;
