--- a/features.html
+++ b/features.html
@@ -19,6 +19,7 @@
             background: linear-gradient(135deg, #a0a1bd, #040406);
             height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             color: #fff;
