--- a/donation.html
+++ b/donation.html
@@ -48,7 +48,7 @@
         h1 {
             text-align: center;
             color: #333;
-            margin-bottom: 20px;
+            margin-top: 10px;
         }
 
         .form-group {
