--- a/features.html
+++ b/features.html
@@ -28,7 +28,7 @@
 
         h1 {
             margin-bottom: 20px;
-            color: #333;
+            color: #fff;
             text-align: center;
         }
 
