--- a/donation.html
+++ b/donation.html
@@ -47,7 +47,7 @@
 
         h1 {
             text-align: center;
-            color: #333;
+            color: #fff;
             margin-top: 10px;
         }
 
