--- a/donation.html
+++ b/donation.html
@@ -59,7 +59,7 @@
             display: block;
             margin-bottom: 5px;
             font-size: 1em;
-            color: #555;
+            color: #fff;
         }
 
         .form-group input, .form-group select {
