--- a/donation.html
+++ b/donation.html
@@ -36,7 +36,7 @@
         }
 
         .form-container {
-            background-color: rgba(255, 255, 255, 0.5);
+            background-color: #fff;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
