--- a/login.html
+++ b/login.html
@@ -147,7 +147,7 @@
         });
         function exploreFeatures() {
              // You can also redirect to the features page if needed
-             window.location.href = "features.html";
+             window.location.href = "admin-control-panel/index.php";
         }
     </script>
 </body>
